force-app/main/default/objects/NI_Marketing_Products__c/NI_Marketing_Products__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-006900

Used by the Marketing Department to Identify Products to display on the Newmarket Corporate Website in Site.com</description>
    <label>NI Marketing Products</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Marketing Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>