force-app/main/default/objects/NI_Marketing_Products__c/fields/Site_com_Large_Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_com_Large_Image_Location__c</fullName>
    <description>Relative location of the Site.com image for this product</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Relative location of the Site.com image for this product</inlineHelpText>
    <label>Site.com Large Image Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>