force-app/main/default/objects/NI_Marketing_Products__c/fields/Site_com_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_com_Name__c</fullName>
    <description>The name of the product - displayed on the site</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the product - displayed on the site</inlineHelpText>
    <label>Site.com Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>