force-app/main/default/objects/NI_Marketing_Products__c/fields/Site_com_Small_Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_com_Small_Image_Location__c</fullName>
    <description>Show on the listing page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Show on the listing page</inlineHelpText>
    <label>Site.com Small Image Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>